# hatt

./: .gitignore  README.md  hatt.json.example  setup.cfg  setup.py
hatt/: __init__.py  hatt.py  hw50.py  ola.py
