[metadata]
name = hatt
version = 0.9
author = Svein Seldal
author_email = sveinse@seldal.com
description = Home Assistant MQTT device interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sveinse/hatt
project_urls =
    Bug Tracker = https://github.com/sveinse/hatt/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    Topic :: Home Automation
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = True
#package_dir =
#    = src
packages = find:
python_requires = >=3.6, <4
install_requires =
    asyncio_mqtt

[options.extras_require]
ola =
    ola
hw50 =
    pyserial-asyncio
dev =
    pylint
    flake8
    mypy
    black
test =
    pytest
    coverage
    pytest-cov

[options.packages.find]

[options.entry_points]
console_scripts =
    hatt = hatt:main
